--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   h2 {
     font-family: 'Merriweather', serif;
     text-align: center;
-    text text-decoration-color: border: 10px;
+    text-decoration-color: border: 10px;
     margin-top: 20px;
     padding-top: 15px;
   }  
